--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -9,16 +9,20 @@
         <script type="text/javascript" src="lib/jasmine-1.3.0/jasmine-html.js"></script>
 
         <!-- include source files here... -->
+        <script type="text/javascript" src="../libs/hmac-sha1.js"></script>
+        <script type="text/javascript" src="../libs/enc-base64-min.js"></script>
         <script type="text/javascript" src="../libs/jquery-2.0.3.js"></script>
         <script type="text/javascript" src="../libs/jquery-ui/js/jquery-ui-1.10.3.custom.js"></script>
         <link rel="stylesheet" type="text/css" href="../libs/jquery-ui/css/smoothness/jquery-ui-1.10.3.custom.css">
         <script src="http://js.api.here.com/se/2.5.3/jsl.js" type="text/javascript" charset="utf-8"></script>
 
         <link rel="stylesheet" type="text/css" href="../application.css">
+        <script type="text/javascript" src="../js/TwitterStreamService.js"></script>
         <script type="text/javascript" src="../js/FourSquareService.js"></script>
         <script type="text/javascript" src="../js/IndexBuilder.js"></script>
 
         <!-- include spec files here... -->
+        <script type="text/javascript" src="spec/TwitterStreamServiceSpec.js"></script>
         <script type="text/javascript" src="spec/FourSquareServiceSpec.js"></script>
         <script type="text/javascript" src="spec/IndexBuilderSpec.js"></script>
 
